Se añadió DataExtractService para extraer los horarios mas recientes directo de la pagina. Se agregó LoginAutomation para extraer el kardex del Alumno. Se agregó SortingsService para ofrecer diferentes metodos de ordenamiento. Se Agregó un filtro en BusquedaHorario para incluir maestros a descartar y materias obligatorias que debe de llevar cada combinacion. Se agregaron Test de todas las implementaciones. Se corrigieron errores en diferentes clases.